--- a/GB.tex
+++ b/GB.tex
@@ -794,61 +794,61 @@ a:=(a_1, \cdots, a_n) \stackrel{f}{\mapsto} f(a) := \sum_\alpha c_\alpha * a^\al
 \end{eqnarray}
 That is, the function $f$ replace every $x_i$ by $a_i$ in the expression for $f(x)$.
 
-\subsection{Zero function on an infinite field (Proposition 5 \S1.1)}
-\label{zeroPolZeroFunc}
-Consider an infinite field $\mathbb{K}$ and $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$.
-Then $f(x) = 0$ in $\mathbb{K}[x_1, \cdots, x_n]$, i.e., zero polynomial iff $f : \mathbb{K}^n \to \mathbb{K}$ is the zero function.
-
-\subsubsection{Proof}
-$(\Rightarrow)$ part is obvious, since if $f(x)$ is the zero polynomial, i.e., all the coefficients are zero, then the zero polynomial $f(x)$ gives zero function:
-\begin{eqnarray}
-f : \mathbb{K}^n \to \mathbb{K}; \forall a \mapsto 0.
-\end{eqnarray}
-
-$(\Leftarrow)$ We will use induction on $n$ to show the statement that if for every $a \in \mathbb{K}^n, f(a) = 0$ then $f(x)$ is the zero polynomial.
-
-\begin{enumerate}
-\item Base case ($n=1$).
-Since $f(x) \in \mathbb{K}[x]$ has at most $\deg(f)$ roots in $\mathbb{K}$ by \S\ref{atMostDeg}, if $\deg(f)$ is finite, we can choose some
-\begin{eqnarray}
-a \in \mathbb{K}
-\end{eqnarray}
-s.t.
-\begin{eqnarray}
-f(a) \neq 0
-\end{eqnarray}
-since $\mathbb{K}$ is infinite (set).
-So, if $\forall a \in \mathbb{K}, f(a) = 0$ then $f(x)=0$ has infinitely many roots, and hence $f(x)$ is the zero polynomial.
-
-\item Induction step.
-Assume $n-1$ case is true, and let $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$ be a polynomial s.t. $\forall a \in \mathbb{K}^n, f(a) = 0$.
-By collecting the terms which are powers of $x_n$, we can write
-\begin{eqnarray}
-f(x) = \sum_{i} g_i (x_1, \cdots, x_{n-1}) * x_n^i.
-\end{eqnarray}
-
-Let us fix
-\begin{eqnarray}
-(a_1, \cdots, a_{n-1}) \in \mathbb{K}^{n-1}
-\end{eqnarray}
-and treat
-\begin{eqnarray}
-f(a_1, \cdots, a_{n-1}, x_n) \in \mathbb{K}[x_n] 
-\end{eqnarray}
-as a polynomial only of $x_n$.
-Since $f(x)$ is zero for every $x_n$, $f(x)$ is the zero polynomial of $x_n$.
-This means the "coefficients" are zero
-\begin{eqnarray}
-g_i (a_1, \cdots, a_{n-1}) = 0, \forall i.
-\end{eqnarray}
-However, our choice of $(a_1, \cdots, a_{n-1})$ is arbitrary and this means every $g_i(x)$ is zero polynomial in $\mathbb{K}[x_1, \cdots, x_{n-1}]$.
-From the induction hypothesis, $g_i (a_1, \cdots, a_{n-1}) = 0$, and
-\begin{eqnarray}
-f(x) = 0
-\end{eqnarray}
-i.e., the zero polynomial.\\
-\end{enumerate}
-$\blacksquare$
+%\subsection{Zero function on an infinite field (Proposition 5 \S1.1)}
+%\label{zeroPolZeroFunc}
+%Consider an infinite field $\mathbb{K}$ and $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$.
+%Then $f(x) = 0$ in $\mathbb{K}[x_1, \cdots, x_n]$, i.e., zero polynomial iff $f : \mathbb{K}^n \to \mathbb{K}$ is the zero function.
+%
+%\subsubsection{Proof}
+%$(\Rightarrow)$ part is obvious, since if $f(x)$ is the zero polynomial, i.e., all the coefficients are zero, then the zero polynomial $f(x)$ gives zero function:
+%\begin{eqnarray}
+%f : \mathbb{K}^n \to \mathbb{K}; \forall a \mapsto 0.
+%\end{eqnarray}
+%
+%$(\Leftarrow)$ We will use induction on $n$ to show the statement that if for every $a \in \mathbb{K}^n, f(a) = 0$ then $f(x)$ is the zero polynomial.
+%
+%\begin{enumerate}
+%\item Base case ($n=1$).
+%Since $f(x) \in \mathbb{K}[x]$ has at most $\deg(f)$ roots in $\mathbb{K}$ by \S\ref{atMostDeg}, if $\deg(f)$ is finite, we can choose some
+%\begin{eqnarray}
+%a \in \mathbb{K}
+%\end{eqnarray}
+%s.t.
+%\begin{eqnarray}
+%f(a) \neq 0
+%\end{eqnarray}
+%since $\mathbb{K}$ is infinite (set).
+%So, if $\forall a \in \mathbb{K}, f(a) = 0$ then $f(x)=0$ has infinitely many roots, and hence $f(x)$ is the zero polynomial.
+%
+%\item Induction step.
+%Assume $n-1$ case is true, and let $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$ be a polynomial s.t. $\forall a \in \mathbb{K}^n, f(a) = 0$.
+%By collecting the terms which are powers of $x_n$, we can write
+%\begin{eqnarray}
+%f(x) = \sum_{i} g_i (x_1, \cdots, x_{n-1}) * x_n^i.
+%\end{eqnarray}
+%
+%Let us fix
+%\begin{eqnarray}
+%(a_1, \cdots, a_{n-1}) \in \mathbb{K}^{n-1}
+%\end{eqnarray}
+%and treat
+%\begin{eqnarray}
+%f(a_1, \cdots, a_{n-1}, x_n) \in \mathbb{K}[x_n] 
+%\end{eqnarray}
+%as a polynomial only of $x_n$.
+%Since $f(x)$ is zero for every $x_n$, $f(x)$ is the zero polynomial of $x_n$.
+%This means the "coefficients" are zero
+%\begin{eqnarray}
+%g_i (a_1, \cdots, a_{n-1}) = 0, \forall i.
+%\end{eqnarray}
+%However, our choice of $(a_1, \cdots, a_{n-1})$ is arbitrary and this means every $g_i(x)$ is zero polynomial in $\mathbb{K}[x_1, \cdots, x_{n-1}]$.
+%From the induction hypothesis, $g_i (a_1, \cdots, a_{n-1}) = 0$, and
+%\begin{eqnarray}
+%f(x) = 0
+%\end{eqnarray}
+%i.e., the zero polynomial.\\
+%\end{enumerate}
+%$\blacksquare$
 
 \section{Affine Varieties}
 Affine varieties are curves, surfaces, and their higher dimensional generalizations defined by polynomial equations.
@@ -1542,61 +1542,61 @@ Since $\deg(q)$ is $m-1$, and has at most $m-1$ root in $\mathbb{K}$.
 Therefore, $f(x)=0$ has at most $m$ root.\\
 $\blacksquare$
 
-%\subsection{Zero function on an infinite field (Proposition 5 \S1.1)}
-%Consider an infinite field $\mathbb{K}$ and $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$.
-%Then $f(x) = 0$ in $\mathbb{K}[x_1, \cdots, x_n]$, i.e., zero polynomial iff $f : \mathbb{K}^n \to \mathbb{K}$ is the zero function.
-%
-%\subsubsection{Proof}
-%$(\Rightarrow)$ part is obvious, since if $f(x)$ is the zero polynomial, i.e., all the coefficients are zero, then the zero polynomial $f(x)$ gives zero function:
-%\begin{eqnarray}
-%f : \mathbb{K}^n \to \mathbb{K}; \forall a \mapsto 0.
-%\end{eqnarray}
-%
-%$(\Leftarrow)$ We will use induction on $n$ to show the statement that if for every $a \in \mathbb{K}^n, f(a) = 0$ then $f(x)$ is the zero polynomial.
-%
-%\begin{enumerate}
-%\item Base case ($n=1$).
-%Since $f(x) \in \mathbb{K}[x]$ has at most $\deg(f)$ roots in $\mathbb{K}$ by \S\ref{atMostDeg}, if $\deg(f)$ is finite, we can choose some
-%\begin{eqnarray}
-%a \in \mathbb{K}
-%\end{eqnarray}
-%s.t.
-%\begin{eqnarray}
-%f(a) \neq 0
-%\end{eqnarray}
-%since $\mathbb{K}$ is infinite (set).
-%So, if $\forall a \in \mathbb{K}, f(a) = 0$ then $f(x)=0$ has infinitely many roots, and hence $f(x)$ is the zero polynomial.
-%
-%\item Induction step.
-%Assume $n-1$ case is true, and let $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$ be a polynomial s.t. $\forall a \in \mathbb{K}^n, f(a) = 0$.
-%By collecting the terms which are powers of $x_n$, we can write
-%\begin{eqnarray}
-%f(x) = \sum_{i} g_i (x_1, \cdots, x_{n-1}) * x_n^i.
-%\end{eqnarray}
-%
-%Let us fix
-%\begin{eqnarray}
-%(a_1, \cdots, a_{n-1}) \in \mathbb{K}^{n-1}
-%\end{eqnarray}
-%and treat
-%\begin{eqnarray}
-%f(a_1, \cdots, a_{n-1}, x_n) \in \mathbb{K}[x_n] 
-%\end{eqnarray}
-%as a polynomial only of $x_n$.
-%Since $f(x)$ is zero for every $x_n$, $f(x)$ is the zero polynomial of $x_n$.
-%This means the "coefficients" are zero
-%\begin{eqnarray}
-%g_i (a_1, \cdots, a_{n-1}) = 0, \forall i.
-%\end{eqnarray}
-%However, our choice of $(a_1, \cdots, a_{n-1})$ is arbitrary and this means every $g_i(x)$ is zero polynomial in $\mathbb{K}[x_1, \cdots, x_{n-1}]$.
-%From the induction hypothesis, $g_i (a_1, \cdots, a_{n-1}) = 0$, and
-%\begin{eqnarray}
-%f(x) = 0
-%\end{eqnarray}
-%i.e., the zero polynomial.\\
-%\end{enumerate}
-%
-%$\blacksquare$
+\subsection{Zero function on an infinite field (Proposition 5 \S1.1)}
+\label{zeroPolZeroFunc}
+Consider an infinite field $\mathbb{K}$ and $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$.
+Then $f(x) = 0$ in $\mathbb{K}[x_1, \cdots, x_n]$, i.e., zero polynomial iff $f : \mathbb{K}^n \to \mathbb{K}$ is the zero function.
+
+\subsubsection{Proof}
+$(\Rightarrow)$ part is obvious, since if $f(x)$ is the zero polynomial, i.e., all the coefficients are zero, then the zero polynomial $f(x)$ gives zero function:
+\begin{eqnarray}
+f : \mathbb{K}^n \to \mathbb{K}; \forall a \mapsto 0.
+\end{eqnarray}
+
+$(\Leftarrow)$ We will use induction on $n$ to show the statement that if for every $a \in \mathbb{K}^n, f(a) = 0$ then $f(x)$ is the zero polynomial.
+
+\begin{enumerate}
+\item Base case ($n=1$).
+Since $f(x) \in \mathbb{K}[x]$ has at most $\deg(f)$ roots in $\mathbb{K}$ by \S\ref{atMostDeg}, if $\deg(f)$ is finite, we can choose some
+\begin{eqnarray}
+a \in \mathbb{K}
+\end{eqnarray}
+s.t.
+\begin{eqnarray}
+f(a) \neq 0
+\end{eqnarray}
+since $\mathbb{K}$ is infinite (set).
+So, if $\forall a \in \mathbb{K}, f(a) = 0$ then $f(x)=0$ has infinitely many roots, and hence $f(x)$ is the zero polynomial.
+
+\item Induction step.
+Assume $n-1$ case is true, and let $f(x) \in \mathbb{K}[x_1, \cdots, x_n]$ be a polynomial s.t. $\forall a \in \mathbb{K}^n, f(a) = 0$.
+By collecting the terms which are powers of $x_n$, we can write
+\begin{eqnarray}
+f(x) = \sum_{i} g_i (x_1, \cdots, x_{n-1}) * x_n^i.
+\end{eqnarray}
+
+Let us fix
+\begin{eqnarray}
+(a_1, \cdots, a_{n-1}) \in \mathbb{K}^{n-1}
+\end{eqnarray}
+and treat
+\begin{eqnarray}
+f(a_1, \cdots, a_{n-1}, x_n) \in \mathbb{K}[x_n] 
+\end{eqnarray}
+as a polynomial only of $x_n$.
+Since $f(x)$ is zero for every $x_n$, $f(x)$ is the zero polynomial of $x_n$.
+This means the "coefficients" are zero
+\begin{eqnarray}
+g_i (a_1, \cdots, a_{n-1}) = 0, \forall i.
+\end{eqnarray}
+However, our choice of $(a_1, \cdots, a_{n-1})$ is arbitrary and this means every $g_i(x)$ is zero polynomial in $\mathbb{K}[x_1, \cdots, x_{n-1}]$.
+From the induction hypothesis, $g_i (a_1, \cdots, a_{n-1}) = 0$, and
+\begin{eqnarray}
+f(x) = 0
+\end{eqnarray}
+i.e., the zero polynomial.\\
+\end{enumerate}
+$\blacksquare$
 
 \subsection{Corollary (Corollary 6 \S1.1)}
 Let $\mathbb{K}$ be an infinite field, and $f(x), g(x) \in  \mathbb{K}[x_1, \cdots, x_n]$.
@@ -4250,95 +4250,13 @@ which has non-zero coefficient $1$ at degree $n$, but
 \begin{eqnarray}
 \forall a \in F_n, f(a) = 1 \neq 0.
 \end{eqnarray}
-Thus there is a non constant polynomial with no root, i.e., $F$ is not algebraically closed.\\
+Thus there is a non constant polynomial with no root, i.e., $F_n$ is not algebraically closed.\\
 $\blacksquare$
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Lemma}
-\label{firstElimination}
-For a given ideal $I \subset \mathbb{K}[x_1, \cdots, x_n] $, define
-\begin{eqnarray}
-I' := \left\{ \left. f \in I \right| f \text{ does not contain any $x_1$} \right\}
-\end{eqnarray}
-Then this $I'$ is an ideal of $\mathbb{K}[\tilde{x}_2, \cdots, \tilde{x}_n]$.
 
-\subsubsection{Proof}
-Since $0 \in I$ has no $x_1$, so
-\begin{eqnarray}
-0 \in I'.
-\end{eqnarray}
-$\forall f',g' \in I'$, they are indeed
-\begin{eqnarray}
-f', g' \in I, \text{ no $x_1$ dependence.}
-\end{eqnarray}
-So $f' * g' \in I$ with no $x_1$ dependence, and
-\begin{eqnarray}
-f'g' \in I'.
-\end{eqnarray}
-Finally, consider $f' \in I', h \in \mathbb{K}[x_2, \cdots, x_n]$.
-We can identify this $h$ as an element of $\mathbb{K}[x_1, \cdots, x_n]$, and the product $f' h \in \tilde{I}$ has no $x_1$ dependence.
-Therefore
-\begin{eqnarray}
-f' h \in I'.
-\end{eqnarray}
-Thus $I'$ is an ideal. \\
-$\blacksquare$
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Resultant}
-Let $f,g \in \mathbb{K}[x_1, \cdots, x_n]$ be polynomials.
-Let us expand $f,g$ with respect to one variable, say $x_1$:
-\begin{eqnarray}
-f &=& f_0 + x_1 f_1 + \cdots + x_1^M f_M \\
-g &=& g_0 + x_1 g_1 + \cdots + x_1^N g_N 
-\end{eqnarray}
-where
-\begin{eqnarray}
-f_0,f_1,\cdots, f_M, g_0, \cdots, g_N \in\mathbb{K}[x_2, \cdots, x_n] \subsetneq \mathbb{K}[x_1, \cdots, x_n].
-\end{eqnarray}
-
-Define the resultant of $f$ and $g$ with respect to $x_1$ as the determinant of the following $N+M$ square matrix:
-\begin{eqnarray}
-\left(\begin{array}{ccccccc} f_0 & f_1 & \cdots  & f_M &   &   &   \\ & f_0 & f_1 & \cdots  & f_M &   &   \\  &   & \ddots  &   &   & \ddots  &   \\  &   &   &  f_0 & f_1 & \cdots  & f_M  \\ g_0  & g_1   & \cdots  & g_{N-1}  &g_N&   &   \\  &  \ddots &   &   &   &  \ddots &   \\  &   &  g_0 &  g_1 & \cdots  & g_{N-1}  & g_N \end{array}\right)
-\end{eqnarray}
-Note that the diagonal elements are $N$-$f_0$'s and $M$-$g_e$'s.
-
-\subsection{Resultant of ideal}
-\label{ResultantOfIdeal}
-Let $I \subset \mathbb{K}[x_1, \cdots, x_n]$ be an ideal of an arbitrary field $\mathbb{K}$, and $R$ be the resultant of $f,g \in I$.
-Then $R$ is also in $I$.
-
-\subsubsection{Proof}
-Let us write the resultant matrix by $(N+M)$ columns
-\begin{eqnarray}
-R = \det (r_1, r_2, \cdots, r_{N+M})
-\end{eqnarray}
-Even if we add to first column $r_1$ by $x_1 r_2, x_1^2 r_3, \cdots x_1^{N+M-1} r_{N+M}$, the resultant does not change, and
-\begin{eqnarray}
-R = \det (r_1+ x_1 r_2 + \cdots x_1^{N+M-1} r_{N+M} , r_2, \cdots, r_{N+M})
-\end{eqnarray}
-Now this new first column becomes
-\begin{eqnarray}
-\left(\begin{array}{c} f \\ x_1 f  \\ \vdots  \\ x_1^{N-1} f  \\ g  \\ x_1 g  \\ \vdots \\ x_1^{M-1} g \end{array}\right)
-\end{eqnarray}
-The Laplace expansion\footnote{
-For $n$ square matrix $A$,
-\begin{eqnarray}
-\det A = \sum_{j=1}^n A_{i_0, j} \Delta_{i_0, j}
-\end{eqnarray}
-where $\Delta_{i_0, j}$ is the $(i_0,j)$ minor (determinant) of $A$:
-\begin{eqnarray}
-\Delta_{i_0, j} := (-)^{i_0+j} A \left(\begin{array}{cccccc}1 & \cdots  &  i_0-1 & i_0+1  & \cdots  & n  \\ 1 & \cdots  & j-1  & j+1  & \cdots  & n \end{array}\right)
-\end{eqnarray}
-
-} of $R$ with this new first column becomes a linear combination of $f$ and $g$.
-Therefore
-\begin{eqnarray}
-f,g \in I \Rightarrow R(f,g; x_1) \in I.
-\end{eqnarray}
-$\blacksquare$
 
 \subsection{Noether normalization lemma}
+\label{NoetherNormalizationLemma}
 Let $\mathbb{K}$ be an algebraically closed field, and
 \begin{eqnarray}
 g \in \mathbb{K}[x_1, \cdots, x_n]
@@ -4356,7 +4274,7 @@ Then there exist $(\lambda_2, \cdots, \lambda_n) \in \mathbb{K}^{n-1}$ s.t.
 g(x_1, \cdots, x_n) &=& g(\tilde{x}_1,\tilde{x}_2 + \lambda_2 \tilde{x}_1 \cdots,  \tilde{x}_n + \lambda_n \tilde{x}_1 ) \\
 &=& c(\lambda_2, \cdots, \lambda_n) \tilde{x}_1^{N} + o( \tilde{x}_1^{N-1} )
 \end{eqnarray}
-with $c(\lambda_2, \cdots, \lambda_n)$ is non zero polynomial. 
+with $c(\lambda_2, \cdots, \lambda_n)$ is non zero polynomial of $\lambda_2, \cdots, \lambda_n$. 
 
 We prove step by step.
 \begin{enumerate}
@@ -4393,17 +4311,18 @@ h_N(\tilde{x}_1, \lambda_2 \tilde{x}_1 \cdots, \lambda_n \tilde{x}_1)
 &=& \left. h_N(\tilde{x}_1,\tilde{x}_2 + \lambda_2, \tilde{x}_1 \cdots,  \tilde{x}_n + \lambda_n \tilde{x}_1 ) \right|_{\tilde{x}_2 = \cdots \ \tilde{x}_{n} = 0} \\
 &=& \tilde{x}_1^N h_N(1, \lambda_2 \cdots, \lambda_n) 
 \end{eqnarray}
-This is the only term which survive under $\tilde{x}_2 = \cdots \ \tilde{x}_{n} = 0$, and indeed
+This is the only term which survives under $\tilde{x}_2 = \cdots \ \tilde{x}_{n} = 0$, and indeed
 \begin{eqnarray}
 \tilde{x}_1^N h_N(1, \lambda_2 \cdots, \lambda_n) = \tilde{x}_1^N c(\lambda_2, \cdots, \lambda_n)
 \end{eqnarray}
+since $h_N$ is homogeneous and has total degree $N$.
 
 \item
 Since $\mathbb{K}$ is infinite, zero polynomial is zero map (see \S\ref{zeroPolZeroFunc}), i.e., all the coefficients are zero.
 
-$(\Leftarrow)$ Just choose $x_1 = 1$.
+$(\Rightarrow)$ Just choose $x_1 = 1$.
 
-$(\Rightarrow)$
+$(\Leftarrow)$
 We can expand $h_N(1, x_2 \cdots, x_n) \in \mathbb{K}[x_2 \cdots, x_n]$
 \begin{eqnarray}
 h_N(1, a_2 \cdots, a_n) =  \sum_{\sum_i \alpha_i = N} d_{\alpha} 1^{\alpha_1} x_2^{\alpha_2} \cdots x_n^{\alpha_n} 
@@ -4469,52 +4388,117 @@ Similarly,
 $0$ remains the same under linear coordinate change.\\
 $\blacksquare$
 
-%\subsection{Lemma}
-%\label{firstElimination}
-%For a given ideal $I \subset \mathbb{K}[x_1, \cdots, x_n] $, define
-%\begin{eqnarray}
-%I' := \left\{ \left. f \in I \right| f \text{ does not contain any $x_1$} \right\}
-%\end{eqnarray}
-%Then this $I'$ is an ideal of $\mathbb{K}[\tilde{x}_2, \cdots, \tilde{x}_n]$.
-%
-%\subsubsection{Proof}
-%Since $0 \in I$ has no $x_1$, so
-%\begin{eqnarray}
-%0 \in I'.
-%\end{eqnarray}
-%$\forall f',g' \in I'$, they are indeed
-%\begin{eqnarray}
-%f', g' \in I, \text{ no $x_1$ dependence.}
-%\end{eqnarray}
-%So $f' * g' \in I$ with no $x_1$ dependence, and
-%\begin{eqnarray}
-%f'g' \in I'.
-%\end{eqnarray}
-%Finally, consider $f' \in I', h \in \mathbb{K}[x_2, \cdots, x_n]$.
-%We can identify this $h$ as an element of $\mathbb{K}[x_1, \cdots, x_n]$, and the product $f' h \in \tilde{I}$ has no $x_1$ dependence.
-%Therefore
-%\begin{eqnarray}
-%f' h \in I'.
-%\end{eqnarray}
-%Thus $I'$ is an ideal. \\
-%$\blacksquare$
-
-\subsection{The weak Nullstellensatz}
-Let $\mathbb{K}$ be an algebraically closed field, and $I \subset \mathbb{K}[x_1, \cdots, x_n]$.
-If $I$ is a proper ideal, i.e.,
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Lemma}
+\label{firstElimination}
+For a given ideal $I \subset \mathbb{K}[x_1, \cdots, x_n] $, define
 \begin{eqnarray}
-I \subsetneq \mathbb{K}[x_1, \cdots, x_n]
+I' := \left\{ \left. f \in I \right| f \text{ does not contain any $x_1$} \right\}
 \end{eqnarray}
-then\footnote{
-For an arbitrary $I \subset \mathbb{K}[x_1, \cdots, x_n]$,
+Then this $I'$ is an ideal of $\mathbb{K}[x_2, \cdots, x_n]$.
+
+\subsubsection{Proof}
+Since $0 \in I$ has no $x_1$ dependence, so
+\begin{eqnarray}
+0 \in I'.
+\end{eqnarray}
+$\forall f',g' \in I'$, they are indeed
+\begin{eqnarray}
+f', g' \in I, \text{ no $x_1$ dependence.}
+\end{eqnarray}
+So $f' * g' \in I$ has no $x_1$ dependence, and
+\begin{eqnarray}
+f'g' \in I'.
+\end{eqnarray}
+Finally, consider $f' \in I', h \in \mathbb{K}[x_2, \cdots, x_n]$.
+We can identify this $h$ as an element of $\mathbb{K}[x_1, \cdots, x_n]$, and the product $f' h \in \tilde{I}$ has no $x_1$ dependence.
+Therefore
+\begin{eqnarray}
+f' h \in I'.
+\end{eqnarray}
+Thus $I'$ is an ideal of $\mathbb{K}[x_2, \cdots, x_n]$. \\
+$\blacksquare$
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Resultant}
+Let $f,g \in \mathbb{K}[x_1, \cdots, x_n]$ be polynomials.
+Let us expand $f,g$ with respect to one variable, say $x_1$:
+\begin{eqnarray}
+f &=& f_0 + x_1 f_1 + \cdots + x_1^M f_M \\
+g &=& g_0 + x_1 g_1 + \cdots + x_1^N g_N 
+\end{eqnarray}
+where
+\begin{eqnarray}
+f_0,f_1,\cdots, f_M, g_0, \cdots, g_N \in\mathbb{K}[x_2, \cdots, x_n] \subsetneq \mathbb{K}[x_1, \cdots, x_n].
+\end{eqnarray}
+
+Define the resultant of $f$ and $g$ with respect to $x_1$ as the determinant of the following $N+M$ square matrix:
+\begin{eqnarray}
+\left(\begin{array}{ccccccc} f_0 & f_1 & \cdots  & f_M &   &   &   \\ & f_0 & f_1 & \cdots  & f_M &   &   \\  &   & \ddots  &   &   & \ddots  &   \\  &   &   &  f_0 & f_1 & \cdots  & f_M  \\ g_0  & g_1   & \cdots  & g_{N-1}  &g_N&   &   \\  &  \ddots &   &   &   &  \ddots &   \\  &   &  g_0 &  g_1 & \cdots  & g_{N-1}  & g_N \end{array}\right)
+\end{eqnarray}
+Note that the diagonal elements are $N$-$f_0$'s and $M$-$g_N$'s.
+We denote the resultant of $f$ and $g$ with respect to $x_1$ as
+\begin{eqnarray}
+R(f,g; x_1).
+\end{eqnarray}
+
+
+\subsection{Resultant of ideal members}
+\label{ResultantOfIdeal}
+Let $I \subset \mathbb{K}[x_1, \cdots, x_n]$ be an ideal of an arbitrary field $\mathbb{K}$, and $R$ be the resultant of $f,g \in I$.
+Then $R$ is also in $I$.
+
+\subsubsection{Proof}
+Let us write the resultant matrix by $(N+M)$ columns
+\begin{eqnarray}
+R = \det (r_1, r_2, \cdots, r_{N+M})
+\end{eqnarray}
+Even if we add to first column $r_1$ by $x_1 r_2, x_1^2 r_3, \cdots, x_1^{N+M-1} r_{N+M}$, the resultant does not change, and
+\begin{eqnarray}
+R = \det (r_1+ x_1 r_2 + \cdots x_1^{N+M-1} r_{N+M} , r_2, \cdots, r_{N+M})
+\end{eqnarray}
+Now this new first column becomes
+\begin{eqnarray}
+\left(\begin{array}{c} f \\ x_1 f  \\ \vdots  \\ x_1^{N-1} f  \\ g  \\ x_1 g  \\ \vdots \\ x_1^{M-1} g \end{array}\right)
+\end{eqnarray}
+The Laplace expansion\footnote{
+For $n$ square matrix $A$,
+\begin{eqnarray}
+\det A = \sum_{j=1}^n A_{i, j_0} \Delta_{i, j_0}
+\end{eqnarray}
+where $\Delta_{i, j_0}$ is the $(i, j_0)$ minor (determinant) of $A$:
+\begin{eqnarray}
+\Delta_{i_0, j} := (-)^{i+j_0} \det\left[ A \left(\begin{array}{cccccc}1 & \cdots  &  i-1 & i+1  & \cdots  & n  \\ 1 & \cdots  & j_0 -1  & j_0 +1  & \cdots  & n \end{array}\right)
+\right]
+\end{eqnarray}
+where $A \left(\begin{array}{cccccc}1 & \cdots  &  i-1 & i+1  & \cdots  & n  \\ 1 & \cdots  & j_0 -1  & j_0 +1  & \cdots  & n \end{array}\right)$ is the $(n-1)$ square matrix of corresponding row and column of original $A$.
+
+} of $R$ with this new first column becomes a linear combination of $f$ and $g$.
+Therefore
+\begin{eqnarray}
+f,g \in I \Rightarrow R(f,g; x_1) \in I.
+\end{eqnarray}
+$\blacksquare$
+
+
+
+\subsection{Proper Ideal}
+For an arbitrary $I \subset \mathbb{K}[x_1, \cdots, x_n]$, $I$ is called a proper ideal iff 
+\begin{eqnarray}
+I \subsetneq \mathbb{K}[x_1, \cdots, x_n].
+\end{eqnarray}
+To see weather $I$ is proper or not, it suffices to check the following:
 \begin{eqnarray}
 1 \in I \Leftrightarrow I = \mathbb{K}[x_1, \cdots, x_n].
 \end{eqnarray}
+
+\subsubsection{Proof}
 $(\Rightarrow)$ $\forall f \in \mathbb{K}[x_1, \cdots, x_n]$,
 \begin{eqnarray}
 f = 1*f \in I
 \end{eqnarray}
 with the trivial (defining) inclusion $I = \mathbb{K}[x_1, \cdots, x_n]$.
+
 $(\Leftarrow)$ Conversely, any non zero constant $c \in \mathbb{K}$ can be seen as a constant polynomial in $I$:
 \begin{eqnarray}
 f = \lambda x . c
@@ -4523,8 +4507,16 @@ Then there exists $c^{-1} \in \mathbb{K}$ and
 \begin{eqnarray}
 c^{-1} f = 1 \in I,
 \end{eqnarray}
-since this inverse $c^{-1}$ can also be seen as a constant polynomial.
-}
+since this inverse $c^{-1}$ can also be seen as a constant polynomial.\\
+$\blacksquare$
+
+\subsection{The weak Nullstellensatz}
+Let $\mathbb{K}$ be an algebraically closed field, and $I \subset \mathbb{K}[x_1, \cdots, x_n]$.
+If $I$ is a proper ideal, i.e.,
+\begin{eqnarray}
+I \subsetneq \mathbb{K}[x_1, \cdots, x_n]
+\end{eqnarray}
+then
 \begin{eqnarray}
 \exists a \in \mathbb{K}^n \text{ s.t. } \forall f \in I, f(a) = 0
 \end{eqnarray}
@@ -4537,64 +4529,80 @@ Or as the contraposition form,
 
 \subsubsection{Proof}
 We prove this statement by induction on $n$.
-Base case $n=1$.
+Base case; $n=1$.
 $I$ is generated by a non constant polynomial $f(x_1)$, \S\ref{InOneDimension}.
 Since $\mathbb{K}$ is algebraically closed, there exists $a_1 \in \mathbb{K}$ with $f(a_1) = 0$.
 
-Let us assume the statement holds for $(n-1)$ variables $\mathbb{K}[x_2, \cdots, x_n]$ with $n >1$.
-For an arbitrary proper ideal $I \subsetneq \mathbb{K}[x_1, \cdots, x_n]$, define an ideal (as above lemma \S\ref{firstElimination})
+Induction step; let us assume the statement holds for $(n-1)$ variables.
+Consider an arbitrary proper ideal $I \subsetneq \mathbb{K}[x_1, \cdots, x_n]$ and
 \begin{eqnarray}
-I' &:=& \left\{ \left. f' \in I \right| f' \text{ does not contain any $x_1$} \right\} \\
-&\subset& \mathbb{K}[x_2, \cdots, x_n]
+g \in I
 \end{eqnarray}
-Since $1 \not\in I$ and so as $I'$,
+which has total degree $N \geq 1$.
+From \S\ref{NoetherNormalizationLemma}, we can choose a linear coordinate change so that there exists a nonzero constant $c$ with
 \begin{eqnarray}
-1 \not \in I'
+\tilde{g}(\tilde{x}_1, \cdots, \tilde{x}_n) = c \tilde{x}_1^N + \sum_{r=0}^{N-1} \tilde{g}_r \tilde{x}_1^r
 \end{eqnarray}
-i.e., $I'$ is a proper ideal of $\mathbb{K}[x_2, \cdots, x_n]$.
-By induction hypothesis,
+where
 \begin{eqnarray}
-\exists (a_2, \cdots, a_n) \in \mathbb{K}^{n-1}, \forall f' \in I', f'(a_2, \cdots, a_n) = 0.
+\tilde{g} \in \tilde{I} \subset \mathbb{K}[\tilde{x}_1,\cdots, \tilde{x}_n]
+\end{eqnarray}
+is in the linear transformed ideal.
+
+Since the linear coordinate change is invertible (as we have seen in \S\ref{LinearTransformedIdeal}), it suffices to show the statement in $\tilde{I}$.
+
+If we consider
+\begin{eqnarray}
+I' := \left\{ \left. f' \in \tilde{I} \right| \text{$f'$ does not contain any $\tilde{x}_1$} \right\}
+\end{eqnarray}
+this is a proper ideal of $\mathbb{K}[\tilde{x}_2,\cdots, \tilde{x}_n]$ (\S\ref{firstElimination}), and
+\begin{eqnarray}
+\tilde{g}_r \in I' \subsetneq \mathbb{K}[\tilde{x}_2,\cdots, \tilde{x}_n].
+\end{eqnarray}
+From induction hypothesis for this $\mathbb{K}[\tilde{x}_2,\cdots, \tilde{x}_n]$,
+\begin{eqnarray}
+\exists (\tilde{a}_2, \cdots, \tilde{a}_n) \in \mathbb{K}^{n-1}, \forall f' \in I', f'(\tilde{a}_2, \cdots, \tilde{a}_n) = 0,
+\end{eqnarray}
+so
+\begin{eqnarray}
+\tilde{g}_0(\tilde{a}_2, \cdots, \tilde{a}_n) = \cdots = \tilde{g}_{N-1}(\tilde{a}_2, \cdots, \tilde{a}_n) = 0.
 \end{eqnarray}
 
-We claim that with this specific $(a_2, \cdots, a_n)$,
+With this specific choice $(\tilde{a}_2, \cdots, \tilde{a}_n)$, let us define
 \begin{eqnarray}
-J := \left\{\left. f(x_1, a_2, \cdots, a_n) \right| f\in I \right\} 
+J := \left\{\left. \tilde{f}(\tilde{x}_1 , \tilde{a}_2, \cdots, \tilde{a}_n) \right| \tilde{f} \in \tilde{I} \right\}
 \end{eqnarray}
-is a proper ideal of $\mathbb{K}[x_1]$.
-We prove this by contradiction; 
+We claim that this $J$ is a proper ideal of $\mathbb{K}[\tilde{x}_1]$.
+We prove this by contradiction;
 
-\paragraph{Proof}
-Suppose there exists $f \in I$ of constant polynomial s.t.
+\paragraph{Proof of this claim}
+Suppose there exists $\tilde{f} \in \tilde{I}$ of constant polynomial s.t.,
 \begin{eqnarray}
-\forall \tilde{x}_1 \in \mathbb{K},  f(x_1, a_2, \cdots, a_n) = 1.
+\forall \tilde{x}_1 \in \mathbb{K}, \tilde{f}(\tilde{x}_1 , \tilde{a}_2, \cdots, \tilde{a}_n) = 1.
 \end{eqnarray}
-If we expand this $f(x_1, \tilde{x}_2, \cdots, x_n) $ with respect to $x_1$
+If we expand this $\tilde{f}(\tilde{x}_1 , \tilde{x}_2, \cdots, \tilde{x}_n)$ with respect to $\tilde{x}_1$,
 \begin{eqnarray}
-f = \sum_{r=0}^M f_r x_1^r
+\tilde{f}(\tilde{x}_1 , \tilde{x}_2, \cdots, \tilde{x}_n)
+=
+\sum_{r=0}^M f_r \tilde{x}_1^r
 \end{eqnarray}
-then each $f_r \in \mathbb{K}[x_2, \cdots, x_n]$ satisfies
+then each $f_r$ satisfies
 \begin{eqnarray}
-f_0(a_2, \cdots, a_n) = 1 \\
-f_1(a_2, \cdots, a_n) = \cdots = f_M(a_2, \cdots, a_n) = 0.
+f_0(\tilde{a}_2, \cdots, \tilde{a}_n) = 1 \\
+f_1(\tilde{a}_2, \cdots, \tilde{a}_n) = \cdots = f_M(\tilde{a}_2, \cdots, \tilde{a}_n) = 0
 \end{eqnarray}
 
-Consider an arbitrary polynomial $g \in I$ of total degree $N \geq 1$.
-By choosing (and fixing) appropriate $(\lambda_2, \cdots, \lambda_n)$ we can choose nonzero $c$ with
-\begin{eqnarray}
-\tilde{g}(\tilde{x}_1, \tilde{x}_2, \cdots, \tilde{x}_n) = \sum_{r=0}^{N-1} g_r \tilde{x}_1^{r} + c \tilde{x}_1^N
-\end{eqnarray}
 Since $c \neq 0$,
 \begin{eqnarray}
 \frac{1}{c} \tilde{g} \in \tilde{I},
 \end{eqnarray}
-the resultant of $\tilde{f} \in \tilde{I}$ and this $\frac{\tilde{g}}{c} \in \tilde{I}$ with respect to $\tilde{x}_1$ at $\tilde{x}_2 = \tilde{a}_2, \cdots, \tilde{x}_n = \tilde{a}_n$ becomes $1$, since at $\tilde{x}_2 = \tilde{a}_2, \cdots, \tilde{x}_n = \tilde{a}_n$
+the resultant of $\tilde{f} \in \tilde{I}$ and this $\frac{\tilde{g}}{c} \in \tilde{I}$ with respect to $\tilde{x}_1$ at $\tilde{x}_2 = \tilde{a}_2, \cdots, \tilde{x}_n = \tilde{a}_n$ becomes $1$, since at $\tilde{x}_2 = \tilde{a}_2, \cdots, \tilde{x}_n = \tilde{a}_n$, the matrix becomes identity;
 \begin{eqnarray}
 \nonumber
 \left. R\left(\tilde{f}, \frac{\tilde{g}}{c}; \tilde{x}_1 \right) \right|_{\tilde{x}_2 = \tilde{a}_2, \cdots, \tilde{x}_n = \tilde{a}_n}
 &=&
-\det\left(\begin{array}{ccccccc} 1 & 0 & \cdots  & 0 &   &   &   \\ & 1 & 0 & \cdots  & 0 &   &   \\  &   & \ddots  &   &   & \ddots  &   \\  &   &   &  1 & 0 & \cdots  & 0  \\ \frac{g_0}{c}  & \frac{g_1}{c}   & \cdots  & \frac{g_{N-1}}{c}  & 1 &   &   \\  &  \ddots &   &   &   &  \ddots &   \\  &   &  \frac{g_0}{c} &  \frac{g_1}{c} & \cdots  & \frac{g_{N-1}}{c}  & 1 \end{array}\right)\\
-&=& 1
+\det\left(\begin{array}{ccccccc} 1 & 0 & \cdots  & 0 &   &   &   \\ & 1 & 0 & \cdots  & 0 &   &   \\  &   & \ddots  &   &   & \ddots  &   \\  &   &   &  1 & 0 & \cdots  & 0  \\ 0  & 0& \cdots  & 0 & 1 &   &   \\  &  \ddots &   &   &   &  \ddots &   \\  &   &  0 & 0 & \cdots  & 0  & 1 \end{array}\right)\\
+&=& 1.
 \end{eqnarray}
 From \S\ref{ResultantOfIdeal}, we have shown that $R(\tilde{f}, \tilde{g}; \tilde{x}_1) \in \tilde{I}$ if $\tilde{f}, \tilde{g} \in \tilde{I}$, but it contradicts, since $1 \not\in \tilde{I}$.\footnote{
 We have shown in \S\ref{LinearTransformedIdeal}, the linear coordinate change is invertible, 
@@ -4610,31 +4618,42 @@ and under linear coordinate change every constant remain the same constant, i.e.
 1 \mapsto 1.
 \end{eqnarray}
 }
-
-Therefore $J$ is a proper ideal
+Therefore, 
 \begin{eqnarray}
-J := \left\{\left. f(x_1, a_2, \cdots, a_n) \right| f\in I \right\} \subsetneq \mathbb{K}[x_1].
+\nonumber
+J &:=& \left\{\left. \tilde{f}(\tilde{x}_1 , \tilde{a}_2, \cdots, \tilde{a}_n) \right| \tilde{f} \in \tilde{I} \right\} \\
+&\subsetneq & \mathbb{K}[\tilde{x}_1].
 \end{eqnarray}
 
-Now if $J \neq \{0\}$, then there exists non constant polynomial $h(x_1)$ with
+Finally, we claim $\forall \tilde{f} \in \tilde{I}$, either
 \begin{eqnarray}
-J = \left< h(x_1) \right>
+\tilde{f} \in I'
 \end{eqnarray}
-Since $\mathbb{K}$ is algebraically closed, there exists some $a_1 \in \mathbb{K}$ s.t.
+or
 \begin{eqnarray}
-h(a_1) = 0.
+\tilde{f}(\tilde{x}_1 , \tilde{a}_2, \cdots, \tilde{a}_n) \in J
+\end{eqnarray}
+holds, since if $\tilde{f}$ does not contain any $\tilde{x}_1$, it clearly in $I'$, else it satisfies $\tilde{f}(\tilde{x}_1 , \tilde{a}_2, \cdots, \tilde{a}_n) \in J$ by definition.
+
+Now we prove the weak Nullstellensatz; if $J \neq \{0\}$, then there exists non constant polynomial $\tilde{h}(\tilde{x}_1)$ with
+\begin{eqnarray}
+J = \left< \tilde{h}(\tilde{x}_1) \right>
+\end{eqnarray}
+Since $\mathbb{K}$ is algebraically closed, there exists some $\tilde{a}_1 \in \mathbb{K}$ s.t.
+\begin{eqnarray}
+\tilde{h}(\tilde{a}_1) = 0.
 \end{eqnarray}
 Therefore,
 \begin{eqnarray}
-\forall f \in I, f(a_1, a_2, \cdots, a_n) = 0.
+\forall \tilde{f} \in \tilde{I}, \tilde{f}( \tilde{a}_1, \tilde{a}_2, \cdots, \tilde{a}_n) = 0.
 \end{eqnarray}
 Else if $J = \{0\}$, then
 \begin{eqnarray}
-\forall x_1, f(x_1, a_2, \cdots, a_n) = 0
+\forall \tilde{x}_1, \tilde{f}( \tilde{x}_1, \tilde{a}_2, \cdots, \tilde{a}_n) = 0
 \end{eqnarray}
 and we can freely choose one element in $\mathbb{K}$ with
 \begin{eqnarray}
-\forall f \in I, f(a_1, a_2, \cdots, a_n) = 0.
+\forall \tilde{f} \in I, \tilde{f}( \tilde{a}_1, \tilde{a}_2, \cdots, \tilde{a}_n) = 0.
 \end{eqnarray}
 $\blacksquare$
 
